Rename agent folder

--- a/pizza_agent/config.yml
+++ b/pizza_agent/config.yml
@@ -3,13 +3,25 @@
 language: es
 
 pipeline:
-  - name: SpacyNLP
   - name: SpacyTokenizer
-  - name: SpacyFeaturizer
-  - name: RegexFeaturizer
-  - name: CRFEntityExtractor
+  - name: LanguageModelFeaturizer
+    model_name: bert
+    model_weights: mrm8488/TinyBERT-spanish-uncased-finetuned-ner
+  - name: DIETClassifier
+    epochs: 100
   - name: EntitySynonymMapper
-  - name: SklearnIntentClassifier
+  - name: ResponseSelector
+    epochs: 100
+  - name: FallbackClassifier
+    threshold: 0.3
+    ambiguity_threshold: 0.1
+#  - name: SpacyNLP
+#  - name: SpacyTokenizer
+#  - name: SpacyFeaturizer
+#  - name: RegexFeaturizer
+#  - name: CRFEntityExtractor
+#  - name: EntitySynonymMapper
+#  - name: SklearnIntentClassifier
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
 # # If you'd like to customize it, uncomment and adjust the pipeline.
 # # See https://rasa.com/docs/rasa/tuning-your-model for more information.
